# SoapyFCDPP

./: .gitignore  CMakeLists.txt  Changelog.txt  README.md  fcddirect.cpp
SoapyFCDPP/: SoapyFCDPP.cpp  SoapyFCDPP.hpp  alsa.c  alsa.h  fcd.c  fcd.h  fcdcmd.h  main.cpp  meson.build
SoapyFCDPP.xcodeproj/: project.pbxproj
SoapyFCDPP.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SoapyFCDPP.xcodeproj/xcuserdata/albin.xcuserdatad/xcschemes/: xcschememanagement.plist
debian/: changelog  control  copyright
